--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@mui/icons-material": "^7.3.6",
     "framer-motion": "^12.23.25",
