--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "next": "^16.1.1",
     "react": "^19.2.1",
     "react-dom": "19.2.1",
-    "react-elastic-carousel": "^0.11.5",
     "react-intersection-observer": "^10.0.0",
     "router": "^2.2.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
